adding the base UI Componants movie list and movie details

--- a/app/src/main/res/layout/app_bar_view_main.xml
+++ b/app/src/main/res/layout/app_bar_view_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.abdelmun3m.movie_land.ViewMain">
+    tools:context="com.abdelmun3m.movie_land.Views.ViewMain">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
