--- a/app/src/main/res/layout/content_view_main.xml
+++ b/app/src/main/res/layout/content_view_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.abdelmun3m.movie_land.ViewMain"
+    tools:context="com.abdelmun3m.movie_land.Views.ViewMain"
     tools:showIn="@layout/app_bar_view_main">
     <FrameLayout
         android:layout_width="match_parent"
