--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -16,12 +16,10 @@
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:contentScrim="?attr/colorPrimary">
-
             <FrameLayout
                 android:id="@+id/photo_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <!--suppress AndroidLintContentDescription -->
                 <com.android.volley.toolbox.NetworkImageView
                     android:id="@+id/backdrops"
                     android:layout_width="match_parent"
@@ -38,7 +36,6 @@
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:id="@+id/loader"/>
-
             </FrameLayout>
 
             <android.support.v7.widget.Toolbar
@@ -147,6 +144,7 @@
                 android:layout_marginStart="10dp">
             </android.support.v7.widget.RecyclerView>
 
+            <!--Reviews-->
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
