--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -9,29 +9,29 @@
     android:clickable="true"
     android:focusable="true"
     android:background="#fff">
-
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="0dp"
+    android:padding="0dp"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        android:layout_margin="0dp"
+        android:padding="0dp"
+        >
+
         <com.abdelmun3m.movie_land.utilities.DynamicHeightNetworkImageView
             android:visibility="visible"
             android:id="@+id/card_poster"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop" />
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="4dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="8dp"
-            android:layout_gravity="center">
             <TextView
+                android:padding="5dp"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:id="@+id/card_title"
@@ -45,6 +45,14 @@
                 android:textColor="#000"
                 android:text="movie title"
                 />
-        </LinearLayout>
     </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:id="@+id/loader"
+        android:layout_gravity="center"
+        />
+</FrameLayout>
+
 </android.support.v7.widget.CardView>
