--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-
     <TextView
-        android:layout_margin="5dp"
-        android:layout_width="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_review"
+        android:id="@+id/tv_review_author"
         android:textColor="@color/colorPrimary"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_review_content"
+        android:textSize="20sp"
+        android:maxLines="5"
+        android:layout_marginStart="10dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/tv_review_Url"
+        android:gravity="end"
+        android:layout_marginEnd="10dp"
+        android:textSize="20dp"
+        android:text="read More"
         />
 </LinearLayout>
