--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -2,14 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:gravity="center">
+
     <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:srcCompat="@android:drawable/ic_media_play"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:clickable="false"
+        app:srcCompat="@drawable/youtube"
+        android:scaleType="centerCrop"
         />
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_trailer_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
