--- a/app/src/main/res/xml/movie_widget_info.xml
+++ b/app/src/main/res/xml/movie_widget_info.xml
@@ -2,9 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/movie_widget"
     android:initialLayout="@layout/movie_widget"
-    android:minHeight="200dp"
-    android:minWidth="150dp"
+    android:minHeight="150dp"
+    android:minWidth="100dp"
+    android:resizeMode="horizontal|vertical"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="none"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen"></appwidget-provider>
