--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -11,6 +11,7 @@
         android:clickable="false"
         app:srcCompat="@drawable/youtube"
         android:scaleType="centerCrop"
+        android:contentDescription="@string/trailer_icon"
         />
     <TextView
         android:visibility="gone"
