--- a/app/src/main/res/layout/movie_widget.xml
+++ b/app/src/main/res/layout/movie_widget.xml
@@ -1,12 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#09C">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="#09C"
+    android:gravity="center"
+    android:layout_gravity="center"
+    >
+
+    <TextView
+        android:id="@+id/widget_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="NO Favorite movies" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/widget_poster_image"
+        android:contentDescription="@string/movie_poster_description"
         />
 
-</RelativeLayout>
+
+</FrameLayout>
