remove duplication of code, add paginagion and land scape view

--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center">
+    android:gravity="center"
+
+    >
 
     <ImageButton
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:clickable="false"
-        app:srcCompat="@drawable/youtube"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/trailer_icon"
-        />
-    <TextView
-        android:visibility="gone"
-        android:id="@+id/tv_trailer_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_gravity="center"
-        android:textColor="@color/colorPrimary"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:clickable="false"
+        app:srcCompat="@drawable/youtube64"
+        android:scaleType="fitXY"
+        android:contentDescription="@string/trailer_icon"
+        android:background="#ffffff"
         />
-
 </LinearLayout>
