--- a/app/src/free/res/layout-land/activity_view_main.xml
+++ b/app/src/free/res/layout-land/activity_view_main.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:orientation="horizontal"
+    android:weightSum="3"
+    >
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_view_main"
+        app:menu="@menu/activity_view_main_drawer"
+        android:visibility="visible" />
 
     <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        >
 
         <include
-            layout="@layout/app_bar_view_main"
+            layout="@layout/content_view_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
@@ -31,14 +44,4 @@
     </FrameLayout>
 
 
-    <android.support.design.widget.NavigationView
-            android:id="@+id/nav_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
-            app:headerLayout="@layout/nav_header_view_main"
-            app:menu="@menu/activity_view_main_drawer" />
-
-
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
