--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -20,8 +20,7 @@
                 android:id="@+id/photo_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/photo_background_protection"
-                >
+                android:background="@drawable/photo_background_protection">
                 <ProgressBar
                     android:layout_width="42dp"
                     android:layout_height="42dp"
@@ -33,7 +32,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="600dp"
                     android:scaleType="fitXY"
-                    app:layout_collapseMode="parallax" />
+                    app:layout_collapseMode="parallax"
+                    android:transitionName="poster"
+                    />
             </FrameLayout>
 
             <android.support.v7.widget.Toolbar
