--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -13,8 +13,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="0dp"
-    android:padding="0dp"
-    >
+    android:padding="0dp">
 
     <ProgressBar
         android:layout_width="22dp"
@@ -22,25 +21,26 @@
         android:id="@+id/loader"
         android:layout_gravity="center"
         />
-    <LinearLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_gravity="top"
         android:layout_margin="0dp"
-        android:padding="0dp"
-        >
+        android:padding="0dp">
 
         <com.abdelmun3m.movie_land.utilities.DynamicHeightNetworkImageView
-            android:visibility="visible"
-            android:id="@+id/card_poster"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
-            <TextView
+                android:visibility="visible"
+                android:id="@+id/card_poster"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:transitionName="poster"
+            />
+
+        <TextView
                 android:padding="5dp"
                 android:gravity="center"
-                android:layout_gravity="center"
+                android:layout_gravity="bottom"
                 android:id="@+id/card_title"
                 style="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="match_parent"
@@ -48,11 +48,14 @@
                 android:ellipsize="end"
                 android:maxLines="3"
                 android:fontFamily="serif"
-                android:textSize="20sp"
-                android:textColor="#000"
+                android:textSize="18sp"
+                android:textColor="#f0f0f0"
                 android:text="movie title"
-                />
-    </LinearLayout>
+                android:lines="1"
+                android:background="@drawable/photo_background_protection"
+            />
+
+    </FrameLayout>
 
 
 </FrameLayout>
